--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*"
+        "illuminate/support": "4.2.*",
+        "guzzlehttp/guzzle": "~5.0"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.0"
