--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Dinkbit\\Notifyme": "src/Dinkbit/Notifyme/"
+            "Dinkbit\\Notifyme\\": "src/Dinkbit/Notifyme/"
         }
     }
 }
