--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*",
+        "illuminate/support": "~4.1|~5.0",
         "guzzlehttp/guzzle": "~5.0"
     },
     "require-dev": {
