--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dinkbit/notifyme",
+    "name": "notifymehq/core",
     "description": "Provides a common interface for notification services",
     "license": "MIT",
     "keywords": [
