--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     },
     "autoload": {
         "psr-4": {
-            "NotifyMeHQ\\NotifyMe\\": "src/NotifyMeHQ/NotifyMe/"
+            "NotifyMeHQ\\NotifyMe\\": "src/"
         }
     }
 }
