--- a/composer.json
+++ b/composer.json
@@ -40,5 +40,10 @@
         "psr-4": {
             "NotifyMeHQ\\NotifyMe\\Tests\\": "tests/"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
     }
 }
