Refactor to remove dependency on laravel

--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,14 @@
         {
             "name": "Joseph Cohen",
             "email": "joseph.cohen@dinkbit.com"
+        },
+        {
+            "name": "Graham Campbell",
+            "email": "graham@mineuk.com"
         }
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "~4.1|~5.0",
         "guzzlehttp/guzzle": "~5.0"
     },
     "require-dev": {
@@ -45,5 +48,7 @@
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
