--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,9 @@
         "notifymehq/twilio": "Twilio gateway for NotifyMe.",
         "notifymehq/webhook": "Webhook gateway for NotifyMe."
     },
+    "config": {
+        "preferred-install": "dist"
+    },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
