--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9"
+        "php": ">=5.5.9",
+        "notifymehq/contracts": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
