--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "notifymehq/contracts": "~1.0"
+        "notifymehq/contracts": "dev-legacy"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0"
